# successfactors-data-pipeline

./: .dockerignore  .env.local  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/interim/: billionaires_2025-09-03.csv  date_of_birth_2025-09-04.csv  merged_dataset_2025-09-04.csv  splited_edu_2025-09-04.csv  trimmed_2025-09-03.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.01-mb-data-exploration.ipynb  1.01-mb-data-cleaning.ipynb  2.01-mb-visualization.ipynb  3.01-mb-modeling.ipynb  4.01-mb-report.ipynb  Untitled.ipynb  edu_split.ipynb  merge.ipynb  sql_test.ipynb
notebooks/sql_connections/: method_1.ipynb  method_2.ipynb
src/: dataset.py
src/api_fetchers/: forbes_billionaires_api_fetch.py
src/data_transformers/: clean_date_of_birth.py  forbes_json_to_csv.py  merge_interims.py  split_university_degree.py  trim_forbes_columns.py
src/scrapers/: date_of_birth.py  university_degree.py
src/sql/: commands.md
src/sql/schema/: create_indexes.sql  promote_to_prod.sql
successfactors/: __init__.py  __main__.py  dataset.py  features.py  plots.py
successfactors/api_fetchers/: forbes_billionaires_API_fetch.py
successfactors/data_transformers/: clean_date_of_birth.py  forbes_json_to_csv.py  mergre_interims.py  split_university_degree.py  trim_forbes_columns.py
successfactors/modeling/: predict.py  train.py
successfactors/sql/: counts.sql  create_billionaires_schema.sql  create_staging.sql  drop_staging.sql  load_staging.sql
successfactors/web_scrapers/: date_of_birth.py  university_degree.py
