[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "successfactors"
version = "0.0.1"
description = "A data science project that collects profiles of successful individuals through APIs to analyze common traits and career paths."
authors = [{ name = "Michael" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.10,<3.13"

# Runtime deps
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "python-dotenv",
  "httpx",
  "requests-cache",
  "beautifulsoup4",
  "lxml",
  "loguru",
  "psycopg2-binary",
  "sqlalchemy",
  "jupysql>=0.11.1",
  "ipykernel>=7.1.0",
]

[project.optional-dependencies]
dev = [
  "ipython",
  "jupysql",
  "jupyterlab",
  "notebook",
  "matplotlib",
  "mkdocs",
  "pytest",
  "ruff",
  "tqdm",
  "typer",
   "seaborn",
  "ipywidgets"
]

[tool.flit.module]
name = "src"

[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
